--- a/pom.xml
+++ b/pom.xml
@@ -26,24 +26,14 @@
     </parent>
 
     <groupId>org.wildfly.openssl</groupId>
-    <artifactId>wildfly-openssl-parent</artifactId>
-    <version>1.0.9.Final-SNAPSHOT</version>
+    <artifactId>wildfly-openssl</artifactId>
+    <version>1.1.0.Final-SNAPSHOT</version>
 
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.org.wildfly.checkstyle>1.0.8.Final</version.org.wildfly.checkstyle>
-
-        <openssl.path></openssl.path>
-        <cmake.generator>Unix Makefiles</cmake.generator>
-        <make.exe>make</make.exe>
-
-        <!-- Test properties -->
-        <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
-        <org.wildfly.openssl.test.host>localhost</org.wildfly.openssl.test.host>
-        <org.wildfly.openssl.test.port>7676</org.wildfly.openssl.test.port>
-        <org.wildfly.openssl.test.secondary.port>7686</org.wildfly.openssl.test.secondary.port>
+        <version.org.wildfly.openssl.wildfly-openssl-java>1.1.0.Final-SNAPSHOT</version.org.wildfly.openssl.wildfly-openssl-java>
+        <version.org.wildfly.openssl.natives>1.1.0.Final-SNAPSHOT</version.org.wildfly.openssl.natives>
     </properties>
 
     <licenses>
@@ -54,18 +44,30 @@
         </license>
     </licenses>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.8.2</version>
-                <scope>test</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.wildfly.openssl</groupId>
+            <artifactId>wildfly-openssl-java</artifactId>
+            <version>${version.org.wildfly.openssl.wildfly-openssl-java}</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <createSourcesJar>true</createSourcesJar>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
@@ -78,46 +80,19 @@
 
     <profiles>
         <profile>
-            <id>default-build</id>
-            <activation>
-                <property>
-                    <name>!parent-release</name>
-                </property>
-            </activation>
-            <modules>
-                <module>java</module>
-                <module>combined</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>parent-release</id>
-            <activation>
-                <property>
-                    <name>parent-release</name>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-deploy-plugin</artifactId>
-                        <configuration>
-                            <skip>false</skip>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
             <id>mac</id>
             <activation>
                 <os>
                     <family>mac</family>
                 </os>
             </activation>
-            <modules>
-                <module>macosx-x86_64</module>
-            </modules>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly.openssl</groupId>
+                    <artifactId>wildfly-openssl-macosx-x86_64</artifactId>
+                    <version>${version.org.wildfly.openssl.natives}</version>
+                </dependency>
+            </dependencies>
         </profile>
         <profile>
             <id>linux-aarch64</id>
@@ -127,9 +102,13 @@
                     <arch>aarch64</arch>
                 </os>
             </activation>
-            <modules>
-                <module>linux-aarch64</module>
-            </modules>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly.openssl</groupId>
+                    <artifactId>wildfly-openssl-linux-aarch64</artifactId>
+                    <version>${version.org.wildfly.openssl.natives}</version>
+                </dependency>
+            </dependencies>
         </profile>
         <profile>
             <id>linux-ppc64le</id>
@@ -139,9 +118,13 @@
                     <arch>ppc64le</arch>
                 </os>
             </activation>
-            <modules>
-                <module>linux-ppc64le</module>
-            </modules>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly.openssl</groupId>
+                    <artifactId>wildfly-openssl-linux-ppc64le</artifactId>
+                    <version>${version.org.wildfly.openssl.natives}</version>
+                </dependency>
+            </dependencies>
         </profile>
         <profile>
             <id>linux-s390x</id>
@@ -151,25 +134,32 @@
                     <arch>s390x</arch>
                 </os>
             </activation>
-            <modules>
-                <module>linux-s390x</module>
-            </modules>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly.openssl</groupId>
+                    <artifactId>wildfly-openssl-linux-s390x</artifactId>
+                    <version>${version.org.wildfly.openssl.natives}</version>
+                </dependency>
+            </dependencies>
         </profile>
         <profile>
             <id>linux-i386</id>
             <activation>
                 <os>
                     <family>linux</family>
-                    <arch>i386</arch>
                 </os>
                 <property>
                     <name>sun.arch.data.model</name>
                     <value>32</value>
                 </property>
             </activation>
-            <modules>
-                <module>linux-i386</module>
-            </modules>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly.openssl</groupId>
+                    <artifactId>wildfly-openssl-linux-i386</artifactId>
+                    <version>${version.org.wildfly.openssl.natives}</version>
+                </dependency>
+            </dependencies>
         </profile>
         <profile>
             <id>linux-x86_64</id>
@@ -183,48 +173,13 @@
                     <value>64</value>
                 </property>
             </activation>
-            <modules>
-                <module>linux-x86_64</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>solaris-x64</id>
-            <activation>
-                <os>
-                    <name>sunos</name>
-                    <arch>amd64</arch>
-                </os>
-            </activation>
-            <modules>
-                <module>solaris-x86_64</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>solaris-sparcv9</id>
-            <activation>
-                <os>
-                    <name>sunos</name>
-                    <arch>sparcv9</arch>
-                </os>
-            </activation>
-            <modules>
-                <module>solaris-sparcv9</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>windows-x64</id>
-            <activation>
-                <os>
-                    <family>windows</family>
-                </os>
-                <property>
-                    <name>sun.arch.data.model</name>
-                    <value>64</value>
-                </property>
-            </activation>
-            <modules>
-                <module>windows-x86_64</module>
-            </modules>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly.openssl</groupId>
+                    <artifactId>wildfly-openssl-linux-x86_64</artifactId>
+                    <version>${version.org.wildfly.openssl.natives}</version>
+                </dependency>
+            </dependencies>
         </profile>
         <profile>
             <id>windows-x86</id>
@@ -237,12 +192,115 @@
                     <value>32</value>
                 </property>
             </activation>
-            <properties>
-                <openssl.path>C:\OpenSSL-Win32\bin</openssl.path>
-            </properties>
-            <modules>
-                <module>windows-i386</module>
-            </modules>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly.openssl</groupId>
+                    <artifactId>wildfly-openssl-windows-i386</artifactId>
+                    <version>${version.org.wildfly.openssl.natives}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>windows-x64</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+                <property>
+                    <name>sun.arch.data.model</name>
+                    <value>64</value>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly.openssl</groupId>
+                    <artifactId>wildfly-openssl-windows-x86_64</artifactId>
+                    <version>${version.org.wildfly.openssl.natives}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>solaris-x64</id>
+            <activation>
+                <os>
+                    <name>sunos</name>
+                    <arch>amd64</arch>
+                </os>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly.openssl</groupId>
+                    <artifactId>wildfly-openssl-solaris-x86_64</artifactId>
+                    <version>${version.org.wildfly.openssl.natives}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>solaris-sparcv9</id>
+            <activation>
+                <os>
+                    <name>sunos</name>
+                    <arch>amd64</arch>
+                </os>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly.openssl</groupId>
+                    <artifactId>wildfly-openssl-solaris-sparcv9</artifactId>
+                    <version>${version.org.wildfly.openssl.natives}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>release</id>
+            <activation>
+                <property>
+                    <name>release</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-deploy-plugin</artifactId>
+                        <configuration>
+                            <skip>false</skip>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly.openssl</groupId>
+                    <artifactId>wildfly-openssl-windows-x86_64</artifactId>
+                    <version>${version.org.wildfly.openssl.natives}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.wildfly.openssl</groupId>
+                    <artifactId>wildfly-openssl-windows-i386</artifactId>
+                    <version>${version.org.wildfly.openssl.natives}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.wildfly.openssl</groupId>
+                    <artifactId>wildfly-openssl-linux-x86_64</artifactId>
+                    <version>${version.org.wildfly.openssl.natives}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.wildfly.openssl</groupId>
+                    <artifactId>wildfly-openssl-linux-i386</artifactId>
+                    <version>${version.org.wildfly.openssl.natives}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.wildfly.openssl</groupId>
+                    <artifactId>wildfly-openssl-macosx-x86_64</artifactId>
+                    <version>${version.org.wildfly.openssl.natives}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.wildfly.openssl</groupId>
+                    <artifactId>wildfly-openssl-solaris-x86_64</artifactId>
+                    <version>${version.org.wildfly.openssl.natives}</version>
+                </dependency>
+            </dependencies>
         </profile>
     </profiles>
 </project>
