--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
         </dependencies>
     </dependencyManagement>
     <build>
+        <sourceDirectory>../libwfssl/src</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
