Move branch to 1.1.x and update poms for new structure

--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
     </parent>
 
     <groupId>org.wildfly.openssl</groupId>
-    <artifactId>wildfly-openssl-parent</artifactId>
-    <version>1.0.10.Final-SNAPSHOT</version>
+    <artifactId>wildfly-openssl-natives-parent</artifactId>
+    <version>1.1.0.Final-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
@@ -38,12 +38,6 @@
         <openssl.path></openssl.path>
         <cmake.generator>Unix Makefiles</cmake.generator>
         <make.exe>make</make.exe>
-
-        <!-- Test properties -->
-        <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
-        <org.wildfly.openssl.test.host>localhost</org.wildfly.openssl.test.host>
-        <org.wildfly.openssl.test.port>7676</org.wildfly.openssl.test.port>
-        <org.wildfly.openssl.test.secondary.port>7686</org.wildfly.openssl.test.secondary.port>
     </properties>
 
     <licenses>
@@ -54,16 +48,6 @@
         </license>
     </licenses>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.8.2</version>
-                <scope>test</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
     <build>
         <plugins>
             <plugin>
@@ -77,18 +61,6 @@
     </build>
 
     <profiles>
-        <profile>
-            <id>default-build</id>
-            <activation>
-                <property>
-                    <name>!parent-release</name>
-                </property>
-            </activation>
-            <modules>
-                <module>java</module>
-                <module>combined</module>
-            </modules>
-        </profile>
         <profile>
             <id>parent-release</id>
             <activation>
