--- a/linux-aarch64/pom.xml
+++ b/linux-aarch64/pom.xml
@@ -21,14 +21,14 @@
 
     <parent>
         <groupId>org.wildfly.openssl</groupId>
-        <artifactId>wildfly-openssl-parent</artifactId>
-        <version>1.0.10.Final-SNAPSHOT</version>
+        <artifactId>wildfly-openssl-natives-parent</artifactId>
+        <version>1.1.0.Final-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
 
     <groupId>org.wildfly.openssl</groupId>
     <artifactId>wildfly-openssl-linux-aarch64</artifactId>
-    <version>1.0.10.Final-SNAPSHOT</version>
+    <version>1.1.0.Final-SNAPSHOT</version>
 
     <packaging>jar</packaging>
 
