Ensure TestAllMethodsImplemented will be able to access the C source code from the native sources jar

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -106,6 +106,25 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>src-dependencies</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>unpack-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <includeGroupIds>org.wildfly.openssl</includeGroupIds>
+                            <classifier>sources</classifier>
+                            <includes>*.c</includes>
+                            <outputDirectory>${project.build.directory}/libwfssl/src</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
