--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
     </licenses>
 
     <build>
+        <sourceDirectory>../libwfssl/src</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
